--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,2 @@
 title: Jessica Vaughn, Hillsborough County School Board District 3
-remote_theme: midnight
-plugins:
-- jekyll-remote-theme
+theme: midnight
